[gd_scene load_steps=12 format=3 uid="uid://dq8wkl0j51p8p"]

[ext_resource type="Texture2D" uid="uid://dwg443bj6ajdu" path="res://Textures/UI/Information/sliderH/grabber_min.png" id="1"]
[ext_resource type="Theme" uid="uid://dil4mrtu23acn" path="res://Resources/Themes/Info.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://brejubx2uw5hm" path="res://Textures/UI/Information/sliderH/grabber_max_highlight.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bap1r68e2wi7i" path="res://Textures/UI/Information/sliderH/grabber_min_highlight.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bsuvokwpk4qs2" path="res://Textures/UI/Information/sliderH/grabber_max.png" id="6"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/RangeSlider.gd" id="7"]

[sub_resource type="StyleBoxEmpty" id="16"]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_bottom = 6.0

[sub_resource type="StyleBoxEmpty" id="18"]

[sub_resource type="StyleBoxEmpty" id="17"]
content_margin_top = 3.0
content_margin_right = 1.0

[sub_resource type="ImageTexture" id="14"]

[sub_resource type="StyleBoxEmpty" id="15"]

[node name="RangeSlider" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 66.0
offset_bottom = 14.0
mouse_filter = 1
theme = ExtResource("2")
theme_override_styles/panel = SubResource("16")
script = ExtResource("7")

[node name="Sliders" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("18")

[node name="SegmentContainer" type="PanelContainer" parent="Sliders"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("17")

[node name="SegmentContainer" type="HBoxContainer" parent="Sliders/SegmentContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Start" type="ColorRect" parent="Sliders/SegmentContainer/SegmentContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
color = Color(0.819608, 0.741176, 0.592157, 1)

[node name="Middle" type="ColorRect" parent="Sliders/SegmentContainer/SegmentContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
mouse_filter = 2
color = Color(1, 0.831373, 0.498039, 1)

[node name="End" type="ColorRect" parent="Sliders/SegmentContainer/SegmentContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
color = Color(0.819608, 0.741176, 0.592157, 1)

[node name="Min" type="HSlider" parent="Sliders" groups=["sliders"]]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme = ExtResource("2")
theme_override_icons/grabber = ExtResource("6")
theme_override_icons/grabber_highlight = ExtResource("3")
theme_override_icons/grabber_disabled = ExtResource("6")
max_value = 10.0
tick_count = 11
ticks_on_borders = true

[node name="Max" type="HSlider" parent="Sliders" groups=["sliders"]]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme = ExtResource("2")
theme_override_icons/grabber = ExtResource("1")
theme_override_icons/grabber_highlight = ExtResource("4")
theme_override_icons/grabber_disabled = ExtResource("1")
theme_override_icons/tick = SubResource("14")
theme_override_styles/slider = SubResource("15")
max_value = 10.0
value = 10.0
tick_count = 11
ticks_on_borders = true

[node name="EndLabels" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = -1
theme_override_constants/margin_bottom = -3

[node name="HBoxContainer" type="HBoxContainer" parent="EndLabels"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Start" type="Label" parent="EndLabels/HBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2")

[node name="EmptySpace" type="Panel" parent="EndLabels/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="End" type="Label" parent="EndLabels/HBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2")
horizontal_alignment = 2

[node name="MinLabelNode" type="Node2D" parent="."]
position = Vector2(11, 11)

[node name="MinLabel" type="Label" parent="MinLabelNode"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.0
offset_right = 1.0
offset_bottom = 9.0
grow_horizontal = 2
theme = ExtResource("2")
text = "1"
horizontal_alignment = 2

[node name="MaxLabelNode" type="Node2D" parent="."]
position = Vector2(47, 11)

[node name="MaxLabel" type="Label" parent="MaxLabelNode"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.0
offset_right = 1.0
offset_bottom = 9.0
grow_horizontal = 2
theme = ExtResource("2")
text = "1"
horizontal_alignment = 2

[connection signal="value_changed" from="Sliders/Min" to="." method="_on_Min_value_changed"]
[connection signal="value_changed" from="Sliders/Max" to="." method="_on_Max_value_changed"]
